// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for TalonOne's trackEvent destination action: all fields 1`] = `
Object {
  "customer_profile_id": "Q5oo3QY5I2",
  "event_attributes": Object {
    "testType": "Q5oo3QY5I2",
  },
  "event_type": "Q5oo3QY5I2",
  "type": "Q5oo3QY5I2",
}
`;

exports[`Testing snapshot for TalonOne's trackEvent destination action: required fields 1`] = `
Object {
  "customer_profile_id": "Q5oo3QY5I2",
  "event_type": "Q5oo3QY5I2",
  "type": "Q5oo3QY5I2",
}
`;
